--- a/html/CV.html
+++ b/html/CV.html
@@ -5,9 +5,93 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CV Guillaume Ribas</title>
     <link rel="stylesheet" href="../css/reboot.css">
-  <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.bunny.net">
+    <link href="https://fonts.bunny.net/css?family=urbanist:400" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.bunny.net">
+    <link href="https://fonts.bunny.net/css?family=vt323:400" rel="stylesheet" />
 </head>
+
 <body>
+
+  <header>
+    <h1>Guillaume Ribas Développeur Web Junior</h1>
+  </header>
+
+  <main>
+    
+    <nav>Expériences - Formations - Compétences - Divers</nav>
+
+    <section>
+      <h2>Présentation</h2>
+
+        <h3>Qui suis-je ?</h3>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempore totam eum natus? Distinctio facere, doloribus doloremque atque, necessitatibus, itaque temporibus enim aperiam voluptatum optio expedita cupiditate porro. Nisi rem dolores odio dicta temporibus laudantium hic repellat perspiciatis, consequuntur sunt distinctio commodi eius officiis eligendi optio suscipit. Veritatis labore voluptatem explicabo!</p>
+
+        <h3>Informations</h3>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, blanditiis esse. Doloribus blanditiis, provident illum magni tempore possimus facere necessitatibus!</p>
+    </section>
+
+    <section>
+      <h2>Expériences</h2>
+
+        <h3>Animateur ALAE/ALSH, PAREJ Toulouse</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed, esse numquam accusamus voluptates architecto hic incidunt blanditiis quibusdam nemo dolore, fuga sapiente magni est aspernatur.</p>
+
+        <h3>Animateur Jeunesse, LEC Grand Sud Labastide Saint-Sernin</h3>
+          <p>lorem25</p>
+
+        <h3> Secouriste, CFS Toulouse</h3>
+          <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Est nisi unde excepturi, quibusdam laboriosam nobis voluptatem odio cumque harum sit maiores, aspernatur sequi exercitationem omnis?</p>
+
+        <h3>Mécanicien TP/Hydrolicien, SGM Matoury</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ducimus ipsa maxime eligendi, necessitatibus quibusdam suscipit voluptate deleniti error eius, iste enim nobis voluptas quam debitis.</p>
+    </section>
+
+    <section>
+      <h2>Formations</h2>
+
+        <h3>BAFA, AFOCAL/IFAC Toulouse</h3>
+          <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veritatis quo animi non, iste qui quae.</p>
+
+        <h3>BPJEPS APT, EPGV Bressols</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia, vel.</p>
+
+        <h3>License STAPS, Université Paul Sabatier Toulouse</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime, fugit?</p>
+
+        <h3>Baccalauréat Economique et Social, Lycée Léon-Gontran Damas Rémire-Montjoly</h3>
+          <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Eligendi, nesciunt?</p>
+    </section>
+
+    <section>
+      <h2> Compétences</h2>
+
+        <h3>Hard Skills</h3>
+         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptas veniam maiores, sed voluptatibus illum quaerat.</p>
+
+        <h3>Soft Skils</h3>
+          <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi laborum possimus iste rerum natus hic.</p>
+    </section>
+
+    <section>
+      <h2>Divers</h2>
+
+        <h3>Langues</h3>
+          <p>Lorem ipsum dolor sit amet.</p>
+
+        <h3>Centre d'intérêts</h3>
+          <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis quo possimus iusto amet cupiditate tempora.</p>
+
+       <h3>Associatif</h3>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nihil molestias sed atque possimus laudantium tenetur?</p>
+    </section>
+
+  </main>
+
+  <footer>
+  Guillaume Ribas &#169; Tous droits réservés
+  </footer>
     
 </body>
 </html>
